Vista de resolver añadida.

--- a/bin/src/main/resources/templates/index.html
+++ b/bin/src/main/resources/templates/index.html
@@ -14,15 +14,11 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet" />
 	
-    <title>Quiz</title>
+    <title>Hello, world!</title>
   </head>
   <body>
     <div class="container">
-    	<div class="inicio">
-	    	<h1 class="grande">Quiz</h1>
-	    	<h6>Aplicación de Retos</h6>
-	    	<a class="btn btn-outline-light btn-lg btn-principal" href="crear-reto">Crear Reto</a>
-    	</div>
+    	<a class="btn btn-primary" href="crear-reto">Crear Reto</a>
 	</div>    
 
     <!-- Optional JavaScript -->
