--- a/bin/src/main/resources/templates/crearReto.html
+++ b/bin/src/main/resources/templates/crearReto.html
@@ -14,15 +14,18 @@
     <!-- Style CSS -->
     <link href="css/style.css" rel="stylesheet" />
 	
-    <title>Quiz</title>
+    <title>Hello, world!</title>
   </head>
   <body>
     <div class="container">
-    	<div class="inicio">
-	    	<h1 class="grande">Quiz</h1>
-	    	<h6>Aplicación de Retos</h6>
-	    	<a class="btn btn-outline-light btn-lg btn-principal" href="crear-reto">Crear Reto</a>
-    	</div>
+    	<h1>Crear nuevo reto</h1>
+    	<form class="form-inline" action="crear-reto" method="POST">
+		  <div class="form-group mx-sm-3 mb-2">
+		    <label for="nombreReto" class="sr-only">Reto</label>
+		    <input type="text" class="form-control" id="nombreReto" name="nombreReto">
+		  </div>
+		  <button type="submit" class="btn btn-primary mb-2">Crear</button>
+		</form>
 	</div>    
 
     <!-- Optional JavaScript -->
