--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -12,7 +12,7 @@ div.container{
 }
 
 h1.grande{
-	font-size: 3.5em;
+	font-size: 4em;
 }
 
 .btn-principal{
@@ -38,6 +38,7 @@ h1.grande{
 
 .card{
 	cursor: pointer;
+	margin: 0 auto;
 }
 
 .card-header{
@@ -55,4 +56,12 @@ h1.grande{
 
 .mensajeFin{
 	display: none;
+	margin: 7%;
+}
+
+input.input-crear-reto[type="text"] {
+    background: #29B6F6;
+	color: white;
+	border: 1px solid white;
+	text-align: center;
 }
