--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -100,6 +100,15 @@ div.custom-radio {
     margin-top: 15px;
 }
 
+div.participante{
+	background: #1E88E5;
+	color: white;
+	font-size: 1.2em;
+	font-weight: bold;
+	border-radius: 10px;
+	border: 5px solid white;
+}
+
 a.borrarOpcion i{
 	margin-top: 32px;
 	cursor: pointer;
