--- a/src/main/resources/templates/salaEspera.html
+++ b/src/main/resources/templates/salaEspera.html
@@ -23,7 +23,7 @@
     		<h3>Participantes</h3>
 	    	<div class="row participantes">
 	    	</div>
-	    	<form id="comenzarReto" th:action="|reto/${dtoReto.id}/comenzar-reto|" method="POST">
+	    	<form id="comenzarReto" action="comenzar-reto" method="POST">
 				<button class="btn btn-azul btn-lg" onclick="this.parentNode.submit()">Comenzar Reto</button>
 			</form>
 			
